--- a/game/game.html
+++ b/game/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>game</title>
     <link rel="stylesheet" href="game_css.css">
 </head>
 <body>
@@ -13,10 +13,9 @@
         <div id="currentScore"></div>
     </div>
 </header>
-<div class="flapp">
-<canvas id="canvas" width="431" height="768"></canvas>
-</div>
-<script src="flappy.js"></script>
 
+<canvas id="canvas" width="276" height="414"></canvas>
+<script src="game.js"></script>
 </body>
+
 </html>
