--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/game/tap.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -71,6 +72,11 @@
 <div class="text">
     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto, corporis cupiditate dolorem in ipsum laboriosam molestias nemo nulla possimus praesentium quaerat quidem soluta tempora unde veniam vitae? Accusamus delectus ipsum officia similique. Alias amet at dolore eaque earum nihil, officia porro quae quas quia quibusdam soluta temporibus veniam. Vero.</h2>
 </div>
+
+<!--<div class="bird"></div>-->
+<!--<div class="hand"></div>-->
+
+
 
 <div class="down">
 <div class="left">
