--- a/index.html
+++ b/index.html
@@ -68,17 +68,24 @@
         <li style="border: none"></li></ul>
     </div>
 
-</div>
+    <div class="play">
+        <a href="game/game.html"><h2>play the game</h2></a>
+    </div>
+<div class="fake"></div>
+
 <div class="text">
     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto, corporis cupiditate dolorem in ipsum laboriosam molestias nemo nulla possimus praesentium quaerat quidem soluta tempora unde veniam vitae? Accusamus delectus ipsum officia similique. Alias amet at dolore eaque earum nihil, officia porro quae quas quia quibusdam soluta temporibus veniam. Vero.</h2>
 </div>
 
-<!--<div class="bird"></div>-->
-<!--<div class="hand"></div>-->
-
+<a href="game/game.html" class="tap">
+<div class="bird"></div>
+<div class="hand"></div>
+</a>
+</div>
 
 
 <div class="down">
+
 <div class="left">
     <ul>
         <li>ABOUT</li>
@@ -108,9 +115,29 @@
             <li>SIGN UP </li>
         </ul>
     </div>
-</div>
 
-<button><a href="game/game.html"></a></button>
+</div>
+    <footer>
+        <div class="text-footer">
+    <h3>© 2014 FLAPPY INC. </h3>
+        </div>
+    </footer>
+
+
+<div id="hidden">HIDDEN TEXT</div>
+<div id="show" onclick="return show('hidden', 50);">SHOW</div>
+<div id="hide">HIDE</div>
+
+<script type="text/javascript">
+    function show(id, speed) {
+        var ID = setInterval(function() {
+            if (document.getElementById(id).style.opacity>1) {
+                clearInterval(ID);
+            }
+            document.getElementById(id).style.opacity += 0.1;
+        }, speed);
+    }
+</script>
 <script>
     function myFunction() {
         var x = document.getElementById("myLinks");
